# crewai-agents

./: crewai_basic.ipynb  main.py  pyproject.toml  requirements.txt
