[project]
name = "crew-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5.23",
    "crewai[tools]>=0.134.0",
    "ipykernel>=6.29.5",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.2.14",
    "python-dotenv>=1.1.1",
]
